--- a/tuan1/html/bai1.html
+++ b/tuan1/html/bai1.html
@@ -19,9 +19,9 @@
             margin: 10px 10px;
         }
         .container h1, h5{
-            margin-top: 0px; /* Loại bỏ khoảng cách phía trên h1 */
-            margin-bottom: 0px; /* Nếu muốn loại bỏ khoảng cách phía dưới */
-            padding-top: 0px; /* Đảm bảo không có padding phía trên */
+            margin-top: 0px; 
+            margin-bottom: 0px; 
+            padding-top: 0px; 
         }
         p{
             color: blueviolet;
